@@ -106,11 +106,10 @@ Bridges:
   LEVEL STUFF
 ----------------------------------------------
 
-BUG: outdoor border placed next to an outdoor lake -- no wall is
-     placed between them, can give a gap for the player to walk.
 
-
-+  "Steepness" option in level control module
+"onion" layouting :
+   patterns which do something to one (or more) sides of a room
+   and recurse for the remaining part.
 
 
 -  review Dante's ideas : doc/DANTE.txt
