@@ -155,9 +155,11 @@ GLOBAL_STYLE_LIST =
   beams      = { few=25, some=50, heaps=5  }
   barrels    = { few=50, some=50, heaps=10 }
   closets    = { few=10, some=30, heaps=30 }
+
   ex_floors  = { few=40, some=60, heaps=20 }
   windows    = { few=20, some=50, heaps=20 }
   pictures   = { few=10, some=50, heaps=10 }
+  steepness  = { few=20, some=60, heaps=10 }
 
   symmetry   = { none=10, few=40, some=60, heaps=10 }
   cages      = { none=30, few=20, some=20, heaps=10 }
