@@ -15,12 +15,14 @@ CHANGELOG
 ! reverted indoor lighting to a simpler model
 
 + generate DOOM 1 episode name graphics
-+ partial work on outdoor borders (like in V5)
++ better outdoor borders (like in V5)
 + experimental support for 3D floors
 + added 'tech_Gray' theme for DOOM, thanks to Mr. Chris
 + new 'Egypt' theme for TNT Evilution, courtesy Mr. Chris
 
 - support upto 8 players in CO-OP mode
+
+- new 'Steepness' setting for Level Control module
 
 - new theme choices: Mostly Tech, Mostly Urban, Mostly Hell
 - reorganized the 'Theme' menu, added a separator
